<resources>
    <string name="app_name">Localização Indoor</string>

    <string name="menu_adm">Administrador</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--menu-->
    <string name="menu_cad_access_point">Cadastrar ponto de referência</string>
    <string name="menu_cad_local">Cadastrar local</string>
    <string name="menu_cad_sala">Cadastrar sala</string>
    <string name="menu_add_user">Adicionar Usuario</string>
    <string name="menu_list_access_point">Lista de pontos de referência</string>
    <string name="menu_list_local">Lista de locais</string>
    <string name="menu_list_sala">Lista de salas</string>
    <string name="menu_list_user">Lista de usuarios</string>
    <string name="menu_cad_local_especial">Cadastrar local especial</string>
    <string name="menu_sair">Sair</string>

    <!--TextView-->
    <string name="tv_descricao">Descrição:</string>
    <string name="tv_distancia">Distancia</string>
    <string name="tv_dbm">dbm</string>
    <string name="tv_funcao">Função:</string>
    <string name="tv_corredor">Corredor:</string>
    <string name="tv_seleciona_local">Local</string>
    <string name="tv_patrimonio">Patrimônio:</string>
    <string name="tv_nome_usuario">Nome:</string>
    <string name="tv_sobrenome_usuario">Sobrenome:</string>
    <string name="tv_email_usuario">Email:</string>
    <string name="tv_matricula_usuario">Matrícula:</string>
    <string name="tv_senha_usuario">Senha:</string>
    <string name="tv_local_sala">Local da sala</string>

    <!--EditText-->

    <!--hint-->
    <string name="hint_predio">Prédio</string>
    <string name="hint_sobrenome">Sobrenome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_matricula">Matricula</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_BSSID">Ex:04:0d:ca:2d:cb:a0</string>
    <string name="hint_SSID">Ex:Administrativa</string>
    <string name="hint_patrimonio">Patrimônio</string>
    <string name="hint_descricao_local">Descrição</string>
    <string name="hint_local">Corredor</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_nome_sala">Nome da sala</string>
    <string name="hint_numero_sala">Número da sala</string>
    <string name="hint_data">00/00/0000</string>
    <string name="hint_corredor">Corredor</string>
    <string name="hint_andar">1</string>
    <string name="hint_funcao">Administrador</string>

    <!--button-->
    <string name="bt_cadastrar_user">Cadastrar Usuario</string>
    <string name="bt_seleciona_ponto">Selecionar ponto de referência</string>
    <string name="bt_cadastrar_local">Cadatrar Local</string>
    <string name="bt_cadastrar_sala">Cadastrar Sala</string>
    <string name="bt_cadastrar_ponto">Cadastrar ponto de referência</string>
    <string name="bt_listar">Listar</string>
    <string name="bt_cad_ponto_ref_ant">Ponto de referência Anterior</string>
    <string name="bt_cad_ponto_ref_ant_2">Ponto de referência Anterior 2</string>
    <string name="bt_cad_ponto_ref_post">Ponto de referência Posterior</string>
    <string name="bt_cad_ponto_ref_post_2">Ponto de referência Posterior 2</string>
    <string name="bt_cad_ponto_ref_prox">Ponto de referência Próximo</string>
    <string name="bt_localizar">Onde você está?</string>
    <string name="bt_rota">Onde você deseja ir?</string>
    <string name="btAdicionar">btAdicionar</string>
    <string name="btEditar">btEditar</string>
    <string name="btremover">btremover</string>

    <!--radiobutton-->
    <string name="andar_select_1">1º Andar</string>
    <string name="andar_select_2">2º Andar</string>
    <string name="andar_select_3">3º Andar</string>
    <string name="andar_select">Andar:</string>

    <!--label-->
    <string name="label_aprox">Aprox. </string>
    <string name="label_metros"> metros</string>
    <string name="label_dbm">dbm</string>
    <string name="label_msg_predio">Você esta no prédio</string>
    <string name="label_msg_andar">no andar</string>
    <string name="label_msg_corredor">no corredor</string>

    <!--toast-->
    <string name="toast_cadastra_sucesso">Cadastrado realizado com sucesso</string>
    <string name="toast_erro_cadastra">Falha ao realizar o cadastro</string>
    <string name="toast_falta_dados_cadastra">Preencha todos os campos</string>
    <string name="toast_ponto_selecionado">Ponto selecionado com sucesso</string>
    <string name="toast_erro_requisicao">Não foi possível realizar a requisição</string>

    <!--descrição-->
    <string name="content_description_ponto_ref">Esta imagem demostra a intensidade do sinanl Wi-Fi</string>
    <string name="contentDescriptionEditar">Botão de Editar</string>
    <string name="contentDescriptionExcluir">Botão de Excluir</string>
    <string name="alertdialog_editar">Editar</string>
    <string name="alertdialog_excluir">Excluir</string>
    <string name="title_opcao">Qual opção você deseja realizar?</string>

    <string name="frase_voce">Você está</string>
    <string name="frase_predio">no predio </string>
    <string name="frase_andar">no andar</string>
    <string name="frase_corredor">no corredor</string>
    <string name="frase_salas">próximo das salas</string>
    <string name="frase_sala">próximo da sala</string>

    <!--builder -->
    <string name="builder_titulo">Permissão</string>
    <string name="builder_mensagem">Para você poder utilizar o sistema é necessario a permissão a localização</string>
    <string name="builder_excluindo">Excluindo cadastro.</string>
    <string name="builder_buscando_dados">Buscando dados.</string>
    <string name="builder_redes">Buscando redes Wi-Fi...</string>
    <string name="builder_cadastro">Realizando Cadastro...</string>
    <string name="builder_localizar">Um momento, estou localizando você</string>
    <string name="builder_rota">Um momento, estou buscando uma rota para o local desejado</string>


    <string name="mn_login">mn_login</string>
    <string name="tvdata">Data</string>
    <string name="tv_frase_inicial">Olá! Bem vindo ao sistema de localização indoor do campus Pelotas.</string>
    <string name="para_onde_voc_deseja_ir">Para onde você deseja ir?</string>
    <string name="buscar">Buscar</string>
    <string name="ponto_de_referencia_proximo">Selecionar pontos de referência</string>

</resources>
