<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cad_acess_point"
            android:icon="@drawable/ic_menu_acess_point"
            android:title="@string/menu_cad_acess_point" />
        <item
            android:id="@+id/nav_cad_local"
            android:icon="@drawable/ic_cad_local"
            android:title="@string/menu_cad_local" />
        <item
            android:id="@+id/nav_cad_sala"
            android:icon="@drawable/ic_cad_sala"
            android:title="@string/menu_cad_sala" />

    </group>

    <item android:title="Usuario">
        <menu>
            <item
                android:id="@+id/nav_add_usuario"
                android:icon="@drawable/ic_add_user"
                android:title="@string/menu_add_user" />

        </menu>
    </item>

</menu>
