<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_lista_ponto_ref"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="6dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="4dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tvSSID"
                android:layout_width="294dp"
                android:layout_height="26dp"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_nome"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imvFotoPontoRefAdapter"
                app:layout_constraintTop_toTopOf="@+id/imvFotoPontoRefAdapter" />

            <ImageView
                android:id="@+id/imvFotoPontoRefAdapter"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/content_description_ponto_ref"
                app:layout_constraintBottom_toTopOf="@+id/tvDBM"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvEmailAdapter"
                android:layout_width="292dp"
                android:layout_height="22dp"
                android:layout_marginStart="84dp"
                android:layout_marginBottom="40dp"
                android:hint="@string/hint_email"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvDistancia"
                android:layout_width="294dp"
                android:layout_height="24dp"
                android:layout_marginStart="84dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_distancia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvEmailAdapter"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvDBM"
                android:layout_width="60dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_dbm"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>