<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_lista_pontos"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="6dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="4dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvSsidAdapter"
                android:layout_width="106dp"
                android:layout_height="22dp"
                android:layout_gravity="start"
                android:hint="@string/hint_SSID"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />


            <TextView
                android:id="@+id/tvBssidAdapter"
                android:layout_width="192dp"
                android:layout_height="23dp"
                android:layout_gravity="start"
                android:layout_marginEnd="8dp"
                android:hint="@string/hint_BSSID"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <TextView
                android:id="@+id/tvPatrimonioAdapter"
                android:layout_width="77dp"
                android:layout_height="21dp"
                android:hint="@string/hint_patrimonio"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView9"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tvLocalAdapter"
                android:layout_width="161dp"
                android:layout_height="19dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/hint_local"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="SSID:"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="BSSID:"
                app:layout_constraintBottom_toBottomOf="@+id/tvSsidAdapter"
                app:layout_constraintStart_toEndOf="@+id/tvSsidAdapter"
                app:layout_constraintTop_toTopOf="@+id/tvSsidAdapter" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="Patrimônio:"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="Local:"
                app:layout_constraintBottom_toBottomOf="@+id/tvPatrimonioAdapter"
                app:layout_constraintStart_toEndOf="@+id/tvPatrimonioAdapter"
                app:layout_constraintTop_toTopOf="@+id/tvPatrimonioAdapter" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>